# commands-json-to-hpp-converter

./: meson.build
include/: code.hpp
src/: code.cpp  main.cpp  meson.build
test/: command-json2cpp  commands.hpp  commands.json
